# robot

./: CMakeLists.txt  package.xml  package.xml.save
launch/: vision_robot.launch
scripts/: emotion_detector.py  emotion_detector_node.py  face_detector.py  main_robot.py  tts_test.py
