<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.1</version>
  <description>Emotion-aware robot with face and speech recognition</description>

  <maintainer email="mustar@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sound_play</depend>

  <exec_depend>python3</exec_depend>

  <export></export>
</package>
